--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -884,6 +884,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   int gnutls_heartbeat_pong (gnutls_session_t session, unsigned int flags);
 
   void gnutls_record_set_timeout (gnutls_session_t session, unsigned int ms);
+  void gnutls_record_disable_padding (gnutls_session_t session);
 
   typedef struct {
     size_t low;
@@ -892,8 +893,8 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
 
   ssize_t gnutls_record_send (gnutls_session_t session, const void *data,
                               size_t data_size);
-  ssize_t gnutls_range_send_message (gnutls_session_t session, const void *data,
-                                     size_t data_size, gnutls_range_st range);
+  ssize_t gnutls_record_send_range (gnutls_session_t session, const void *data,
+                                    size_t data_size, const gnutls_range_st *range);
   ssize_t gnutls_record_recv (gnutls_session_t session, void *data,
                               size_t data_size);
 #define gnutls_read gnutls_record_recv
@@ -902,10 +903,9 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
     unsigned char *seq);
 
   void gnutls_session_enable_compatibility_mode (gnutls_session_t session);
+  void gnutls_record_set_max_empty_records (gnutls_session_t session, const unsigned int i);
 
-  void gnutls_record_max_empty_records (gnutls_session_t session, const unsigned int i);
-  
-  int gnutls_range_can_use_length_hiding (gnutls_session_t session);
+  int gnutls_record_can_use_length_hiding (gnutls_session_t session);
 
   int gnutls_record_get_direction (gnutls_session_t session);
 
