- Remove references to the (now renamed) gnutls_range_send_message - Ignore sbuf-api generated documentation
Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ doc/reference/tmpl.stamp
 doc/reference/tmpl/
 doc/reference/version.xml
 doc/reference/xml/
+doc/sbuf-api.texi
 doc/scripts/Makefile
 doc/scripts/Makefile.in
 doc/stamp-1
