--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -901,7 +901,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
     size_t high;
   } gnutls_range_st;
 
-  ssize_t gnutls_range_split (gnutls_session_t session,
+  int gnutls_range_split (gnutls_session_t session,
                               const gnutls_range_st *orig,
                               gnutls_range_st * small_range,
                               gnutls_range_st * rem_range);
