--- a/doc/examples/Makefile.am
+++ b/doc/examples/Makefile.am
@@ -42,8 +42,11 @@ CXX_LDADD = ../../lib/libgnutlsxx.la \
 
 noinst_PROGRAMS = ex-client-resume ex-client-dtls
 noinst_PROGRAMS += ex-cert-select ex-client-x509
-noinst_PROGRAMS += ex-serv-dtls
+noinst_PROGRAMS += ex-serv-dtls ex-client-xssl1 ex-client-xssl2
 noinst_PROGRAMS += print-ciphersuites
+
+ex_client_xssl1_LDADD = $(LDADD) ../../lib/libgnutls-xssl.la
+ex_client_xssl2_LDADD = $(LDADD) ../../lib/libgnutls-xssl.la
 
 if ENABLE_CXX
 ex_cxx_SOURCES = ex-cxx.cpp
