--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -187,6 +187,7 @@ APIMANS += gnutls_compression_set_priority.3
 APIMANS += gnutls_credentials_clear.3
 APIMANS += gnutls_credentials_set.3
 APIMANS += gnutls_db_check_entry.3
+APIMANS += gnutls_db_check_entry_time.3
 APIMANS += gnutls_db_get_ptr.3
 APIMANS += gnutls_db_remove_session.3
 APIMANS += gnutls_db_set_cache_expiration.3
@@ -561,7 +562,10 @@ APIMANS += gnutls_pubkey_verify_data2.3
 APIMANS += gnutls_pubkey_verify_hash.3
 APIMANS += gnutls_pubkey_verify_hash2.3
 APIMANS += gnutls_random_art.3
+APIMANS += gnutls_range_split.3
+APIMANS += gnutls_record_can_use_length_hiding.3
 APIMANS += gnutls_record_check_pending.3
+APIMANS += gnutls_record_cork.3
 APIMANS += gnutls_record_disable_padding.3
 APIMANS += gnutls_record_get_direction.3
 APIMANS += gnutls_record_get_discarded.3
@@ -569,9 +573,14 @@ APIMANS += gnutls_record_get_max_size.3
 APIMANS += gnutls_record_recv.3
 APIMANS += gnutls_record_recv_seq.3
 APIMANS += gnutls_record_send.3
+APIMANS += gnutls_record_send_range.3
+APIMANS += gnutls_record_set_max_empty_records.3
 APIMANS += gnutls_record_set_max_size.3
+APIMANS += gnutls_record_set_timeout.3
+APIMANS += gnutls_record_uncork.3
 APIMANS += gnutls_rehandshake.3
 APIMANS += gnutls_rnd.3
+APIMANS += gnutls_rnd_refresh.3
 APIMANS += gnutls_rsa_export_get_modulus_bits.3
 APIMANS += gnutls_rsa_export_get_pubkey.3
 APIMANS += gnutls_rsa_params_cpy.3
@@ -589,6 +598,7 @@ APIMANS += gnutls_server_name_get.3
 APIMANS += gnutls_server_name_set.3
 APIMANS += gnutls_session_channel_binding.3
 APIMANS += gnutls_session_enable_compatibility_mode.3
+APIMANS += gnutls_session_force_valid.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
 APIMANS += gnutls_session_get_id.3
@@ -732,6 +742,7 @@ APIMANS += gnutls_x509_crq_privkey_sign.3
 APIMANS += gnutls_x509_crq_set_attribute_by_oid.3
 APIMANS += gnutls_x509_crq_set_basic_constraints.3
 APIMANS += gnutls_x509_crq_set_challenge_password.3
+APIMANS += gnutls_x509_crq_set_dn.3
 APIMANS += gnutls_x509_crq_set_dn_by_oid.3
 APIMANS += gnutls_x509_crq_set_key.3
 APIMANS += gnutls_x509_crq_set_key_purpose_oid.3
@@ -817,9 +828,11 @@ APIMANS += gnutls_x509_crt_set_crl_dist_points.3
 APIMANS += gnutls_x509_crt_set_crl_dist_points2.3
 APIMANS += gnutls_x509_crt_set_crq.3
 APIMANS += gnutls_x509_crt_set_crq_extensions.3
+APIMANS += gnutls_x509_crt_set_dn.3
 APIMANS += gnutls_x509_crt_set_dn_by_oid.3
 APIMANS += gnutls_x509_crt_set_expiration_time.3
 APIMANS += gnutls_x509_crt_set_extension_by_oid.3
+APIMANS += gnutls_x509_crt_set_issuer_dn.3
 APIMANS += gnutls_x509_crt_set_issuer_dn_by_oid.3
 APIMANS += gnutls_x509_crt_set_key.3
 APIMANS += gnutls_x509_crt_set_key_purpose_oid.3
