slow tests moved at the end of the suite

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -66,12 +66,13 @@ ctests = mini-deflate simple gc set_pkcs12_cred certder certuniqueid	\
 	 crq_apis init_roundtrip pkcs12_s2k_pem dn2 mini-eagain		\
 	 nul-in-x509-names x509_altname pkcs12_encode mini-x509		\
 	 mini-rehandshake rng-fork mini-eagain-dtls resume-dtls \
-	 x509cert x509cert-tl infoaccess rsa-encrypt-decrypt \
-	 mini-loss-time mini-tdb mini-dtls-rehandshake mini-record \
+	 x509cert x509cert-tl infoaccess  \
+	 mini-tdb mini-dtls-rehandshake \
 	 mini-termination mini-x509-cas mini-x509-2 pkcs12_simple \
-	 mini-emsgsize-dtls mini-handshake-timeout chainverify-unsorted \
+	 mini-emsgsize-dtls chainverify-unsorted \
 	 mini-dtls-heartbeat mini-x509-callbacks key-openssl		\
-	 mini-dtls-srtp mini-dtls-record mini-xssl
+	 mini-dtls-srtp mini-xssl rsa-encrypt-decrypt mini-loss-time \
+	 mini-loss-time mini-record mini-dtls-record mini-handshake-timeout
 
 if ENABLE_OCSP
 ctests += ocsp
