Added convenience functions to avoid ugly casting in simple programs.

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -1409,6 +1409,12 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                                            const giovec_t * iov, int iovcnt);
 
   typedef int (*gnutls_errno_func) (gnutls_transport_ptr_t);
+  
+  void gnutls_transport_set_int2 (gnutls_session_t session, int r, int s);
+  #define gnutls_transport_set_int(s, i) gnutls_transport_set_int2(s, i, i)
+  
+  void gnutls_transport_get_int2 (gnutls_session_t session, int * r, int *s);
+  int gnutls_transport_get_int (gnutls_session_t session);
 
   void gnutls_transport_set_ptr (gnutls_session_t session,
                                  gnutls_transport_ptr_t ptr);
