--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -887,6 +887,8 @@ FUNCS += functions/gnutls_handshake_set_post_client_hello_function
 FUNCS += functions/gnutls_handshake_set_post_client_hello_function.short
 FUNCS += functions/gnutls_handshake_set_private_extensions
 FUNCS += functions/gnutls_handshake_set_private_extensions.short
+FUNCS += functions/gnutls_handshake_set_random
+FUNCS += functions/gnutls_handshake_set_random.short
 FUNCS += functions/gnutls_handshake_set_timeout
 FUNCS += functions/gnutls_handshake_set_timeout.short
 FUNCS += functions/gnutls_hash
@@ -1245,6 +1247,8 @@ FUNCS += functions/gnutls_pkcs11_privkey_init
 FUNCS += functions/gnutls_pkcs11_privkey_init.short
 FUNCS += functions/gnutls_pkcs11_privkey_set_pin_function
 FUNCS += functions/gnutls_pkcs11_privkey_set_pin_function.short
+FUNCS += functions/gnutls_pkcs11_privkey_status
+FUNCS += functions/gnutls_pkcs11_privkey_status.short
 FUNCS += functions/gnutls_pkcs11_reinit
 FUNCS += functions/gnutls_pkcs11_reinit.short
 FUNCS += functions/gnutls_pkcs11_set_pin_function
@@ -1731,6 +1735,10 @@ FUNCS += functions/gnutls_tpm_privkey_delete
 FUNCS += functions/gnutls_tpm_privkey_delete.short
 FUNCS += functions/gnutls_tpm_privkey_generate
 FUNCS += functions/gnutls_tpm_privkey_generate.short
+FUNCS += functions/gnutls_transport_get_int
+FUNCS += functions/gnutls_transport_get_int.short
+FUNCS += functions/gnutls_transport_get_int2
+FUNCS += functions/gnutls_transport_get_int2.short
 FUNCS += functions/gnutls_transport_get_ptr
 FUNCS += functions/gnutls_transport_get_ptr.short
 FUNCS += functions/gnutls_transport_get_ptr2
@@ -1739,6 +1747,10 @@ FUNCS += functions/gnutls_transport_set_errno
 FUNCS += functions/gnutls_transport_set_errno.short
 FUNCS += functions/gnutls_transport_set_errno_function
 FUNCS += functions/gnutls_transport_set_errno_function.short
+FUNCS += functions/gnutls_transport_set_int
+FUNCS += functions/gnutls_transport_set_int.short
+FUNCS += functions/gnutls_transport_set_int2
+FUNCS += functions/gnutls_transport_set_int2.short
 FUNCS += functions/gnutls_transport_set_ptr
 FUNCS += functions/gnutls_transport_set_ptr.short
 FUNCS += functions/gnutls_transport_set_ptr2
