--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -241,6 +241,7 @@ APIMANS += gnutls_handshake_get_last_out.3
 APIMANS += gnutls_handshake_set_max_packet_length.3
 APIMANS += gnutls_handshake_set_post_client_hello_function.3
 APIMANS += gnutls_handshake_set_private_extensions.3
+APIMANS += gnutls_handshake_set_random.3
 APIMANS += gnutls_handshake_set_timeout.3
 APIMANS += gnutls_hash.3
 APIMANS += gnutls_hash_deinit.3
@@ -420,6 +421,7 @@ APIMANS += gnutls_pkcs11_privkey_get_pk_algorithm.3
 APIMANS += gnutls_pkcs11_privkey_import_url.3
 APIMANS += gnutls_pkcs11_privkey_init.3
 APIMANS += gnutls_pkcs11_privkey_set_pin_function.3
+APIMANS += gnutls_pkcs11_privkey_status.3
 APIMANS += gnutls_pkcs11_reinit.3
 APIMANS += gnutls_pkcs11_set_pin_function.3
 APIMANS += gnutls_pkcs11_set_token_function.3
@@ -663,10 +665,14 @@ APIMANS += gnutls_tpm_key_list_deinit.3
 APIMANS += gnutls_tpm_key_list_get_url.3
 APIMANS += gnutls_tpm_privkey_delete.3
 APIMANS += gnutls_tpm_privkey_generate.3
+APIMANS += gnutls_transport_get_int.3
+APIMANS += gnutls_transport_get_int2.3
 APIMANS += gnutls_transport_get_ptr.3
 APIMANS += gnutls_transport_get_ptr2.3
 APIMANS += gnutls_transport_set_errno.3
 APIMANS += gnutls_transport_set_errno_function.3
+APIMANS += gnutls_transport_set_int.3
+APIMANS += gnutls_transport_set_int2.3
 APIMANS += gnutls_transport_set_ptr.3
 APIMANS += gnutls_transport_set_ptr2.3
 APIMANS += gnutls_transport_set_pull_function.3
