Select CPU optimizations based on target cpu rather than the host.

--- a/configure.ac
+++ b/configure.ac
@@ -34,6 +34,7 @@ AC_MSG_RESULT([***
 ])
 
 dnl Checks for programs.
+AC_CANONICAL_TARGET
 AC_PROG_CC
 AM_PROG_AS
 AC_PROG_CXX
@@ -87,17 +88,14 @@ hw_accel=none
 
 
 if test "$use_accel" != "no"; then
-case $host_cpu in
+case $target_cpu in
   i?86 | x86_64 | amd64)
-dnl    GCC_FLAG_ADD([-maes -mpclmul],[X86])
-dnl    if test "x$X86" = "xyes";then
       AC_CHECK_HEADERS(cpuid.h)
-      if test "$host_cpu" = "x86_64" || test "$host_cpu" = "amd64"; then
+      if test "$target_cpu" = "x86_64" || test "$target_cpu" = "amd64"; then
         hw_accel="x86-64"
       else
         hw_accel="x86"
       fi
-dnl    fi
   ;;
   *)
   ;;
