--- a/lib/gnutls.pc.in
+++ b/lib/gnutls.pc.in
@@ -16,7 +16,7 @@ includedir=@includedir@
 
 Name: GnuTLS
 Description: Transport Security Layer implementation for the GNU system
-URL: http://www.gnu.org/software/gnutls/
+URL: http://www.gnutls.org/
 Version: @VERSION@
 Libs: -L${libdir} -lgnutls
 Libs.private: @LTLIBNETTLE@ @LTLIBZ@ @LTLIBINTL@ @LIBSOCKET@ @LTLIBPTHREAD@ @LTLIBICONV@ @P11_KIT_LIBS@ @LIB_SELECT@ @TSS_LIBS@ @LIB_CLOCK_GETTIME@
