Added configure option to disable the build of tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,9 @@ SUBDIRS += po src
 if ENABLE_DOC
 SUBDIRS += doc
 endif
+if ENABLE_TESTS
 SUBDIRS += tests
+endif
 
 if HAVE_GUILE
 SUBDIRS += guile
