--- a/configure.ac
+++ b/configure.ac
@@ -653,6 +653,9 @@ if features are disabled)
   OpenPGP support:      $ac_enable_openpgp
   SRP support:          $ac_enable_srp
   PSK support:          $ac_enable_psk
+  DHE support:          $ac_enable_dhe
+  ECDHE support:        $ac_enable_ecdhe
+  RSA-EXPORT support:   $ac_enable_rsa_export
   Anon auth support:    $ac_enable_anon
   Heartbeat support:    $ac_enable_heartbeat
 ])
