updated auto-generated files

--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -506,6 +506,8 @@ APIMANS += gnutls_privkey_init.3
 APIMANS += gnutls_privkey_set_pin_function.3
 APIMANS += gnutls_privkey_sign_data.3
 APIMANS += gnutls_privkey_sign_hash.3
+APIMANS += gnutls_privkey_sign_raw_data.3
+APIMANS += gnutls_privkey_status.3
 APIMANS += gnutls_protocol_get_id.3
 APIMANS += gnutls_protocol_get_name.3
 APIMANS += gnutls_protocol_get_version.3
@@ -603,6 +605,7 @@ APIMANS += gnutls_session_enable_compatibility_mode.3
 APIMANS += gnutls_session_force_valid.3
 APIMANS += gnutls_session_get_data.3
 APIMANS += gnutls_session_get_data2.3
+APIMANS += gnutls_session_get_desc.3
 APIMANS += gnutls_session_get_id.3
 APIMANS += gnutls_session_get_id2.3
 APIMANS += gnutls_session_get_ptr.3
@@ -694,6 +697,7 @@ APIMANS += gnutls_x509_crl_get_extension_data.3
 APIMANS += gnutls_x509_crl_get_extension_info.3
 APIMANS += gnutls_x509_crl_get_extension_oid.3
 APIMANS += gnutls_x509_crl_get_issuer_dn.3
+APIMANS += gnutls_x509_crl_get_issuer_dn2.3
 APIMANS += gnutls_x509_crl_get_issuer_dn_by_oid.3
 APIMANS += gnutls_x509_crl_get_next_update.3
 APIMANS += gnutls_x509_crl_get_number.3
@@ -727,6 +731,7 @@ APIMANS += gnutls_x509_crq_get_attribute_info.3
 APIMANS += gnutls_x509_crq_get_basic_constraints.3
 APIMANS += gnutls_x509_crq_get_challenge_password.3
 APIMANS += gnutls_x509_crq_get_dn.3
+APIMANS += gnutls_x509_crq_get_dn2.3
 APIMANS += gnutls_x509_crq_get_dn_by_oid.3
 APIMANS += gnutls_x509_crq_get_dn_oid.3
 APIMANS += gnutls_x509_crq_get_extension_by_oid.3
@@ -776,6 +781,7 @@ APIMANS += gnutls_x509_crt_get_basic_constraints.3
 APIMANS += gnutls_x509_crt_get_ca_status.3
 APIMANS += gnutls_x509_crt_get_crl_dist_points.3
 APIMANS += gnutls_x509_crt_get_dn.3
+APIMANS += gnutls_x509_crt_get_dn2.3
 APIMANS += gnutls_x509_crt_get_dn_by_oid.3
 APIMANS += gnutls_x509_crt_get_dn_oid.3
 APIMANS += gnutls_x509_crt_get_expiration_time.3
@@ -789,6 +795,7 @@ APIMANS += gnutls_x509_crt_get_issuer_alt_name.3
 APIMANS += gnutls_x509_crt_get_issuer_alt_name2.3
 APIMANS += gnutls_x509_crt_get_issuer_alt_othername_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_dn.3
+APIMANS += gnutls_x509_crt_get_issuer_dn2.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_by_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_dn_oid.3
 APIMANS += gnutls_x509_crt_get_issuer_unique_id.3
@@ -908,6 +915,9 @@ APIMANS += gnutls_x509_trust_list_add_trust_mem.3
 APIMANS += gnutls_x509_trust_list_deinit.3
 APIMANS += gnutls_x509_trust_list_get_issuer.3
 APIMANS += gnutls_x509_trust_list_init.3
+APIMANS += gnutls_x509_trust_list_remove_cas.3
+APIMANS += gnutls_x509_trust_list_remove_trust_file.3
+APIMANS += gnutls_x509_trust_list_remove_trust_mem.3
 APIMANS += gnutls_x509_trust_list_verify_crt.3
 APIMANS += gnutls_x509_trust_list_verify_named_crt.3
 
