--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1418,6 +1418,10 @@ FUNCS += functions/gnutls_privkey_sign_data
 FUNCS += functions/gnutls_privkey_sign_data.short
 FUNCS += functions/gnutls_privkey_sign_hash
 FUNCS += functions/gnutls_privkey_sign_hash.short
+FUNCS += functions/gnutls_privkey_sign_raw_data
+FUNCS += functions/gnutls_privkey_sign_raw_data.short
+FUNCS += functions/gnutls_privkey_status
+FUNCS += functions/gnutls_privkey_status.short
 FUNCS += functions/gnutls_protocol_get_id
 FUNCS += functions/gnutls_protocol_get_id.short
 FUNCS += functions/gnutls_protocol_get_name
@@ -1612,6 +1616,8 @@ FUNCS += functions/gnutls_session_get_data
 FUNCS += functions/gnutls_session_get_data.short
 FUNCS += functions/gnutls_session_get_data2
 FUNCS += functions/gnutls_session_get_data2.short
+FUNCS += functions/gnutls_session_get_desc
+FUNCS += functions/gnutls_session_get_desc.short
 FUNCS += functions/gnutls_session_get_id
 FUNCS += functions/gnutls_session_get_id.short
 FUNCS += functions/gnutls_session_get_id2
@@ -1794,6 +1800,8 @@ FUNCS += functions/gnutls_x509_crl_get_extension_oid
 FUNCS += functions/gnutls_x509_crl_get_extension_oid.short
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn.short
+FUNCS += functions/gnutls_x509_crl_get_issuer_dn2
+FUNCS += functions/gnutls_x509_crl_get_issuer_dn2.short
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn_by_oid
 FUNCS += functions/gnutls_x509_crl_get_issuer_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crl_get_next_update
@@ -1860,6 +1868,8 @@ FUNCS += functions/gnutls_x509_crq_get_challenge_password
 FUNCS += functions/gnutls_x509_crq_get_challenge_password.short
 FUNCS += functions/gnutls_x509_crq_get_dn
 FUNCS += functions/gnutls_x509_crq_get_dn.short
+FUNCS += functions/gnutls_x509_crq_get_dn2
+FUNCS += functions/gnutls_x509_crq_get_dn2.short
 FUNCS += functions/gnutls_x509_crq_get_dn_by_oid
 FUNCS += functions/gnutls_x509_crq_get_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crq_get_dn_oid
@@ -1958,6 +1968,8 @@ FUNCS += functions/gnutls_x509_crt_get_crl_dist_points
 FUNCS += functions/gnutls_x509_crt_get_crl_dist_points.short
 FUNCS += functions/gnutls_x509_crt_get_dn
 FUNCS += functions/gnutls_x509_crt_get_dn.short
+FUNCS += functions/gnutls_x509_crt_get_dn2
+FUNCS += functions/gnutls_x509_crt_get_dn2.short
 FUNCS += functions/gnutls_x509_crt_get_dn_by_oid
 FUNCS += functions/gnutls_x509_crt_get_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crt_get_dn_oid
@@ -1984,6 +1996,8 @@ FUNCS += functions/gnutls_x509_crt_get_issuer_alt_othername_oid
 FUNCS += functions/gnutls_x509_crt_get_issuer_alt_othername_oid.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn.short
+FUNCS += functions/gnutls_x509_crt_get_issuer_dn2
+FUNCS += functions/gnutls_x509_crt_get_issuer_dn2.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_by_oid
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_by_oid.short
 FUNCS += functions/gnutls_x509_crt_get_issuer_dn_oid
@@ -2222,6 +2236,12 @@ FUNCS += functions/gnutls_x509_trust_list_get_issuer
 FUNCS += functions/gnutls_x509_trust_list_get_issuer.short
 FUNCS += functions/gnutls_x509_trust_list_init
 FUNCS += functions/gnutls_x509_trust_list_init.short
+FUNCS += functions/gnutls_x509_trust_list_remove_cas
+FUNCS += functions/gnutls_x509_trust_list_remove_cas.short
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_file
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_file.short
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_mem
+FUNCS += functions/gnutls_x509_trust_list_remove_trust_mem.short
 FUNCS += functions/gnutls_x509_trust_list_verify_crt
 FUNCS += functions/gnutls_x509_trust_list_verify_crt.short
 FUNCS += functions/gnutls_x509_trust_list_verify_named_crt
